# learnOpenCV

./: CMakeLists.txt  Note.md  README.md  sift_compare.cpp
BGW/: test.cpp
OpenMP/: CMakeLists.txt  OpenMP_test.cpp  test.cpp
PCL/: CMakeLists.txt  iterative_closest_point.cpp  readPCL.cpp
Project/: BOWimage.cpp
back_up/: back-up-5-15.cpp  back-up-5-16-v0.1.cpp  back-up-ba-corrupted.cpp  back-up-time-based.cpp  back_up.cpp
ceras/curve_fitting/: CMakeLists.txt
ceras/matrix_adaptor/: CMakeLists.txt  main.cpp
depth_read/: CMakeLists.txt  depthRead.cpp
eigen/: input.cpp
program_test/: CMakeLists.txt
program_test/nonmaxup/: CMakeLists.txt  nonmaxup.cpp
program_test/normalize_histograms/: CMakeLists.txt  normalize_histograms.cpp
sift/: Video_sift_original.cpp  sift_original.cpp  sift_trackbar.cpp  videoCapture.cpp  video_sift_compare_original.cpp  video_sift_trackbar.cpp
surf_cuda/: surf_gpu_mp.cpp
